2003-11-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URL/newURL.java: New test, adapted from kaffe.

2003-11-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLConnection/getPermission.java: New test.

2003-11-12  Sascha Brawer  <brawer@dandelis.ch> 

	* gnu/testlet/java/awt/geom/FlatteningPathIterator/
	FlatteningPathIterator.java: New file.
	* gnu/testlet/java/awt/geom/FlatteningPathIterator/
	currentSegment.java: Likewise.
	* gnu/testlet/java/awt/geom/FlatteningPathIterator/
	getFlatness.java: Likewise.
	* gnu/testlet/java/awt/geom/FlatteningPathIterator/
	getRecursionLimit.java: Likewise.
	* gnu/testlet/java/awt/geom/FlatteningPathIterator/
	getWindingRule.java: Likewise.

2003-11-09  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/reflect/Method/invoke.java (test): Also
	test invocation via interface methods.
	* gnu/testlet/java/lang/reflect/Method/iface.java: New file.

2003-11-04  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/geom/CubicCurve2D/solveCubic.java:
	Add test equations from test code of the GNU Scientific Library.
	Thanks to Brian Gough <bjg@network-theory.co.uk>.

	* gnu/testlet/java/awt/geom/QuadCurve2D/solveQuadratic.java:
	Likewise.

2003-10-30  Jeff Sturm  <jsturm@one-point.com>

	* gnu/testlet/java/io/ByteArrayOutputStream/subclass.java: New test.

2003-10-26  Everton da Silva Marques  <everton@lab.ipaccess.diveo.net.br>

	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java
	(test_MultipleBind): New test method.
	(testall): Call test_MultipleBind.

2003-10-29  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest2.java:
	DatagramPacket contsructors throw IllegalArgumentException if illegal
	buffer size is given.

2003-10-29  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/BinaryCompatibility/.cvsignore:
	Ignore generated files.

2003-10-26  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/jar/JarInputStream/getNextEntry.java: New